IE8 style fixes making Share look ok again in IE8 - IE8 removed support for the "opacity" css attribute after having supported it in both IE6 & 7, we had fixed this for the default theme but not the other ones, which made every dialog have a non-transparent background, hiding all elements under the dialog with a nasty color. - Added a ie8.css file since header links & buttons was not nearly aligned in IE8
git-svn-id: https://svn.alfresco.com/repos/alfresco-open-mirror/alfresco/HEAD@19727 7033f55c-6c29-4ad8-afba-765cb616e738

--- a/root/projects/slingshot/source/web/themes/greenTheme/yui/assets/skin.css
+++ b/root/projects/slingshot/source/web/themes/greenTheme/yui/assets/skin.css
@@ -477,7 +477,7 @@ cursor: pointer;
 }
 .yui-skin-greenTheme .yui-calcontainer .yui-cal-nav-mask {
 background-color: #000;
-opacity: 0.25;*filter:alpha(opacity=25);
+opacity: 0.25;filter:alpha(opacity=25);
 }
 .yui-skin-greenTheme .yui-calcontainer .yui-cal-nav {
 font-family: arial,helvetica,clean,sans-serif;
@@ -886,7 +886,7 @@ text-decoration: none;
 }
 .yui-skin-greenTheme .mask {
 background-color: #000;
-opacity: .25;*filter:alpha(opacity=25);
+opacity: .25;filter:alpha(opacity=25);
 }
 .yui-skin-greenTheme .yui-panel-container {
 padding: 0 1px;*padding:2px;
@@ -964,7 +964,7 @@ _bottom: 0;
 _margin-top: 3px;
 _margin-left: -1px;
 background-color: #000;
-opacity: .12;*filter:alpha(opacity=12);
+opacity: .12;filter:alpha(opacity=12);
 }
 .yui-skin-greenTheme .yui-dialog .ft {
 border-top: none;
@@ -1046,7 +1046,7 @@ bottom: -3px;
 background-color: #000;
 }
 .yui-skin-greenTheme .yui-tt-shadow-visible {
-opacity: .12;*filter:alpha(opacity=12);
+opacity: .12;filter:alpha(opacity=12);
 }
 .yui-skin-greenTheme .yui-dt-mask {
 position: absolute;
@@ -1172,7 +1172,7 @@ width: 6px;
 }
 .yui-skin-greenTheme .yui-dt-mask {
 background-color: #000;
-opacity: .25;*filter:alpha(opacity=25);
+opacity: .25;filter:alpha(opacity=25);
 }
 .yui-skin-greenTheme .yui-dt-message {
 background-color: #FFF;
@@ -2915,7 +2915,7 @@ background-repeat: no-repeat;
 }
 .yui-skin-greenTheme .yui-menu-shadow-visible {
 background-color: #000;
-opacity: .12;*filter:alpha(opacity=12);
+opacity: .12;filter:alpha(opacity=12);
 }
 .yui-skin-greenTheme .yuimenuitem-selected {
 background-color: #B3D4FF;
